--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -33,16 +33,11 @@
 <form id="tasksForm" method="post">
     {% csrf_token %}
     {{ formset.management_form }}
-    <input type="hidden" name="order" id="taskOrder">
     <div class="row">
         <div class="col-12">
             <div class="card mb-4">
                 <div class="card-body px-0 pt-0 pb-2">
                     <div class="table-responsive p-0">
-                        <div class="table-title d-flex p-3">
-                            <span class="text-sm">Target branch:</span><h6 class="text-sm px-1 font-weight-bold">{{ branch }}</h6>
-                        </div>
-
                         <table class="table align-items-center mb-2 table-collapse">
                             <thead>
                             <tr>
@@ -52,73 +47,70 @@
                                 <th class="text-uppercase text-secondary text-xxs font-weight-bolder w-100">
                                     Task
                                 </th>
-                                <th class="move-buttons d-none text-uppercase text-secondary text-xxs font-weight-bolder w-100">
-                                    Move
-                                </th>
                             </tr>
                             </thead>
                             <tbody>
                             {% for form in formset %}
                             {% if form.instance.id %}
-                            <tr class="entry" {% if form.instance.done_for_branch %} data-bs-toggle="tooltip" data-bs-placement="top" title="Done" {% endif %}>
-                                <td>
-                                    <div class="d-flex justify-content-center responsive__mobile-2">
-                                        <div class="form-check">
-                                            <div class="checkbox-wrapper {% if form.instance.done_for_branch %} checked-tooltip {% endif %}">
-                                                <input type="checkbox" class="form-check-input flex-shrink-0"
-                                                       id="checkbox_{{ form.instance.id }}"
-                                                       name="done_{{ form.instance.id }}"
-                                                       {% if form.instance.done_for_branch %} checked
-                                                       disabled {% endif %}/>
-                                                <input type="hidden" name="{{ form.prefix }}-id"
-                                                       id="id_{{ form.prefix }}-id" value="{{ form.instance.id }}">
-                                                <input type="hidden" name="{{ form.prefix }}-title"
-                                                       id="id_{{ form.prefix }}-title"
-                                                       value="{{ form.instance.title }}">
+                                <tr class="entry" {% if form.instance.done_for_branch %} data-bs-toggle="tooltip" data-bs-placement="top" title="Done" {% endif %}>
+                                    <td>
+                                        <div class="d-flex justify-content-center responsive__mobile-2">
+                                            <div class="form-check">
+                                                <div class="checkbox-wrapper {% if form.instance.done_for_branch %} checked-tooltip {% endif %}">
+                                                    <input type="checkbox" class="form-check-input flex-shrink-0"
+                                                           id="checkbox_{{ form.instance.id }}"
+                                                           name="done_{{ form.instance.id }}"
+                                                            {% if form.instance.done_for_branch %} checked
+                                                           disabled {% endif %}/>
+                                                    <input type="hidden" name="{{ form.prefix }}-id"
+                                                           id="id_{{ form.prefix }}-id" value="{{ form.instance.id }}">
+                                                    <input type="hidden" name="{{ form.prefix }}-title"
+                                                           id="id_{{ form.prefix }}-title"
+                                                           value="{{ form.instance.title }}">
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <div class="d-flex px-1 py-1">
-                                        <h6 class="mb-0 text-sm responsive__mobile-3">{{ form.instance.title }}</h6>
-                                    </div>
-                                    <div class="d-flex">
-                                        <small class="d-block px-1 text-xs opacity-7 responsive__mobile-3">
-                                            <span data-feather="tag" class="align-text-bottom" style="height: 16px"></span>
-                                            {{ form.instance.get_types|join:", " }}
-                                            {% if form.instance.assignees %}
-                                            <span data-feather="user" class="align-text-bottom" style="height: 16px"></span>
-                                            {{ form.instance.assignees }}
-                                            {% endif %}
-                                        </small>
-                                    </div>
-                                    {% if form.instance.summary %}
-                                    <div class="d-flex text-sm px-1 py-1 align-items-center no-select descriptionLink">
-                                        <span class="" data-feather="chevron-right"></span>
-                                        Description
-                                        <span class="hidden">{{ form.instance.summary }}</span>
-                                    </div>
-                                    {% endif %}
-                                    <div class="ml-4 card rounded-0 task-description" style="display: none;"></div>
-                                </td>
-                                <td>
+                                    </td>
+                                    <td>
+                                        <div class="d-flex px-1 py-1">
+                                            <h6 class="mb-0 text-sm responsive__mobile-3">{{ form.instance.title }}</h6>
+                                        </div>
+                                        <div class="d-flex">
+                                            <small class="d-block px-1 text-xs opacity-7 responsive__mobile-3">
+                                                <span data-feather="tag" class="align-text-bottom" style="height: 16px"></span>
+                                                {{ form.instance.get_types|join:", " }}
+                                                {% if form.instance.assignees %}
+                                                    <span data-feather="user" class="align-text-bottom" style="height: 16px"></span>
+                                                    {{ form.instance.assignees }}
+                                                {% endif %}
+                                            </small>
+                                        </div>
+                                        {% if form.instance.summary %}
+                                            <div class="d-flex text-sm px-1 py-1 align-items-center no-select descriptionLink">
+                                                <span class="" data-feather="chevron-right"></span>
+                                                Description
+                                                <span class="hidden">{{ form.instance.summary }}</span>
+                                            </div>
+                                        {% endif %}
+                                        <div class="ml-4 card rounded-0 task-description" style="display: none;"></div>
+                                    </td>
+                                    <td>
                                         <div class="d-flex flex-column px-1 py-1 move-buttons justify-content-center d-none">
                                             <button type="button" class="btn m-1 p-1 btn-secondary move-up">↑</button>
                                             <button type="button" class="btn m-1 p-1 btn-secondary move-down">↓</button>
                                         </div>
-                                </td>
-                            </tr>
-                            <!-- Display form errors for debugging -->
-                            {% if form.errors %}
-                            <tr>
-                                <td colspan="3">
-                                    <div class="alert alert-danger">
-                                        {{ form.errors }}
-                                    </div>
-                                </td>
-                            </tr>
-                            {% endif %}
+                                    </td>
+                                </tr>
+                                <!-- Display form errors for debugging -->
+                                {% if form.errors %}
+                                    <tr>
+                                        <td colspan="2">
+                                            <div class="alert alert-danger">
+                                                {{ form.errors }}
+                                            </div>
+                                        </td>
+                                    </tr>
+                                {% endif %}
                             {% endif %}
                             {% endfor %}
                             </tbody>
@@ -127,16 +119,14 @@
                 </div>
             </div>
             {% if branch != "All" %}
-                <input type="submit" id="submitTasksBtn" class="btn w-100 bg-gradient-primary" value="Submit tasks" style="float: right; max-width: 200px;"/>
-                <a class="btn mb-0 bg-gradient-primary" href="/tasks/add{% if branch %}?branch={{ branch }}{% endif %}">
-                    Add task
-                </a>
+                <input type="submit" id="submitTasksBtn" class="w-100 btn bg-gradient-primary" value="Submit tasks" style="float: right; max-width: 200px;"/>
             {% else %}
                 <p class="d-flex justify-content-end px-1 text-xs opacity-7 responsive__mobile-3">Please select your working branch to submit a task</p>
             {% endif %}
         </div>
     </div>
 </form>
+
 
 {% else %}
 <p>There are no tasks available.</p>
