--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -30,6 +30,7 @@
 {% block content %}
 
 {% if task_list %}
+{% if branch != "All" %}
 <form id="tasksForm" method="post">
     {% csrf_token %}
     {{ formset.management_form }}
@@ -122,18 +123,68 @@
                     </div>
                 </div>
             </div>
-            {% if branch != "All" %}
-                <input type="submit" id="submitTasksBtn" class="btn w-100 bg-gradient-primary" value="Submit tasks" style="float: right; max-width: 200px;"/>
-                <a class="btn mb-0 bg-gradient-primary" href="https://app.iaro.co/admin/tasks/task/add/">
-                    Add task
-                </a>
-            {% else %}
-                <p class="d-flex justify-content-end px-1 text-xs opacity-7 responsive__mobile-3">Please select your working branch to submit a task</p>
-            {% endif %}
+            <input type="submit" id="submitTasksBtn" class="btn w-100 bg-gradient-primary" value="Submit tasks" style="float: right; max-width: 200px;"/>
+            <a class="btn mb-0 bg-gradient-primary" href="https://app.iaro.co/admin/tasks/task/add/">
+                Add task
+            </a>
         </div>
     </div>
 </form>
-
+{% else %}
+    {% for branch_name, tasks in task_list.items %}
+        <div class="card mb-4">
+            <div class="card-body px-0 pt-0 pb-2">
+                <div class="table-responsive p-0">
+                    <div class="table-title d-flex p-3">
+                        <span class="text-sm">Branch:</span><h6 class="text-sm px-1 font-weight-bold">{{ branch_name }}</h6>
+                    </div>
+                    {% if tasks %}
+                        <table class="table align-items-center mb-2 table-collapse">
+                            <thead>
+                            <tr>
+                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder w-100">
+                                    Task
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for task in tasks %}
+                                <tr class="entry">
+                                    <td class="padding-all">
+                                        <div class="d-flex px-1 py-1">
+                                            <h6 class="mb-0 text-sm responsive__mobile-3">{{ task.title }}</h6>
+                                        </div>
+                                        <div class="d-flex">
+                                            <small class="d-block px-1 text-xs opacity-7 responsive__mobile-3">
+                                                <span data-feather="tag" class="align-text-bottom" style="height: 16px"></span>
+                                                {{ task.get_types|join:", " }}
+                                                {% if task.assignees %}
+                                                    <span data-feather="user" class="align-text-bottom" style="height: 16px"></span>
+                                                    {{ task.assignees }}
+                                                {% endif %}
+                                            </small>
+                                        </div>
+                                        {% if task.summary %}
+                                            <div class="d-flex text-sm px-1 py-1 align-items-center no-select descriptionLink">
+                                                <span class="" data-feather="chevron-right"></span>
+                                                Description
+                                                <span class="hidden">{{ task.summary }}</span>
+                                            </div>
+                                        {% endif %}
+                                        <div class="ml-4 card rounded-0 task-description" style="display: none;"></div>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    {% else %}
+                        <p class="d-flex justify-content-center px-1 text-xs opacity-7 responsive__mobile-3">There are no tasks yet for the {{ branch_name }}</p>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+{% endif %}
 
 {% else %}
 <p>There are no tasks available.</p>
@@ -173,7 +224,9 @@
 </div>
 
 <style>
-/* Add to your CSS file or inside a <style> block */
+.padding-all {
+    padding-left: 10px !important;
+}
 
 .move-buttons {
     align-items: center;
