--- a/inventory/templates/inventory_evaluation.html
+++ b/inventory/templates/inventory_evaluation.html
@@ -21,35 +21,27 @@
     <tbody>
       {% for storage in storages %}
         <tr class="title">
-          <th colspan="3">{{ storage }}</th>
+          <th colspan="3">{{ storage.name }}</th>
         </tr>
         <tr class="header thead-dark">
           <th scope="col" class="name-column">Name</th>
           <th scope="col" class="name-column">Submitted on</th>
           <th scope="col" style="white-space: nowrap;">Availability</th>
         </tr>
-        {% for product in products %}
-          {% for product_storage in product.product_storages.all %}
-            {% if product_storage.storage == storage %}
+          {% for product_storage in storage.productstorage_set.all %}
             <tr>
-              <td>{{ product.name }}</td>
-                <td>{{ product_storage.last_updated|date:"d-F-y H:i" }}</td>
+              <td>{{ product_storage.product.name }}</td>
+                <td>{{ product_storage.last_updated|date:"d.m.y H:i" }} Uhr</td>
               <td>
-                {% for ps in product.product_storages.all %}
-                  {% if ps.storage == storage %}
-                    {% if ps.has_shortage %}
-                    <span class="warning">
-                    {% else %}
-                    <span>
-                    {% endif %}
-                    {{ ps.value|floatformat:2 }} / {{ ps.value_intended|floatformat:2 }} {{ product.unit.all|join:", " }}
-                    </span>
-                  {% endif %}
-                {% endfor %}
+                {% if product_storage.has_shortage %}
+                <span class="warning">
+                {% else %}
+                <span>
+                {% endif %}
+                {{ product_storage.value|floatformat:2 }} / {{ product_storage.value_intended|floatformat:2 }} {{ product_storage.product.unit.all|join:", " }}
+                </span>
               </td>
             </tr>
-            {% endif %}
-          {% endfor %}
         {% endfor %}
       {% endfor %}
     </tbody>
