--- a/inventory/templates/inventory_production.html
+++ b/inventory/templates/inventory_production.html
@@ -19,7 +19,7 @@
                         <thead>
                         <tr class="title">
                             <th colspan="4">
-                                <h6>{{ seller }}</h6>
+                                <h6>{{ seller.name }}</h6>
                             </th>
                         </tr>
                         </thead>
