--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -6,12 +6,10 @@
 {% endblock extra_css %}
 
 {% block widgets %}
+    <div class="d-flex flex-column gap-2">
 <div class="d-flex justify-content-between flex-wrap gap-2">
     <!-- admin btn to edit order and filter by branch -->
     {% if user.is_superuser or user.is_staff %}
-        {% if branch != "All" %}
-            <button type="button" id="toggleOrderButton" class="btn bg-gradient-primary mb-0">Edit Order</button>
-        {% endif %}
     <div class="dropdown">
         <button class="btn bg-gradient-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             {{ branch }}
@@ -34,6 +32,15 @@
             {% endfor %}
         </ul>
     </div>
+</div>
+    {% if user.is_superuser or user.is_staff %}
+    <div class="d-flex justify-content-between flex-wrap gap-2" style="align-self: end">
+    <!-- admin btn to edit order and filter by branch -->
+            {% if branch != "All" %}
+            <button type="button" id="toggleOrderButton" class="btn bg-gradient-primary mb-0">Edit Order</button>
+        {% endif %}
+    </div>
+    {% endif %}
 </div>
 {% endblock widgets %}
 
@@ -224,6 +231,39 @@
 {% else %}
 <p>There are no tasks available.</p>
 {% endif %}
+
+<div class="modal fade" id="submitTasksModal" tabindex="-1" role="dialog"
+     aria-labelledby="submitTasksModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="submitTasksModalLabel">Warning</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure the selected tasks have been completed for today?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn bg-gradient-primary" id="confirmSubmit">Submit tasks</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade modal-tour" tabindex="-1" role="dialog" id="infoModal">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content rounded-4 shadow">
+            <div class="modal-body p-5">
+                <h2 class="fw-bold mb-0">Task description</h2>
+                <br>
+                <span class="infoModalContent"></span>
+                <button type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Okay
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <style>
 .padding-all {
